--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,6 @@ python-dotenv==1.0.0
 python-multipart==0.0.6
 email-validator==2.1.1
 PyJWT==2.8.0
+httpx==0.24.1
+pytest==7.4.3
+pytest-asyncio==0.21.1
