--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,7 @@ PyJWT==2.8.0
 httpx==0.24.1
 pytest==7.4.3
 pytest-asyncio==0.21.1
+google-generativeai>=0.3.0
+beautifulsoup4>=4.12.0
+aiohttp>=3.9.0
+lxml>=4.9.0
